--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".ui.CreateGameActivity"></activity>
+    <activity android:name=".ui.CreateGameActivity"/>
     <activity android:name=".ui.MainActivity">
       <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+        <action android:name="android.intent.action.MAIN"/>
 
-        <category android:name="android.intent.category.LAUNCHER" />
+        <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".ui.ManagePlayersActivity" />
-    <activity android:name=".ui.GameActivity" />
+    <activity android:name=".ui.ManagePlayersActivity"/>
+    <activity android:name=".ui.GameActivity"/>
   </application>
 
 </manifest>
