--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".ui.CreateGameActivity"/>
+    <activity
+      android:name=".ui.CreateGameActivity"
+      android:parentActivityName=".ui.MainActivity"/>
+    <activity
+      android:name=".ui.LoadGamesActivity"
+      android:parentActivityName=".ui.MainActivity"/>
     <activity android:name=".ui.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
