--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,16 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme">
+    android:theme="@style/Theme.Red">
     <activity
       android:name=".ui.CreateGameActivity"
       android:parentActivityName=".ui.MainActivity"/>
     <activity
       android:name=".ui.LoadGameActivity"
       android:parentActivityName=".ui.MainActivity"/>
-    <activity android:name=".ui.MainActivity">
+    <activity
+      android:name=".ui.MainActivity"
+      android:theme="@style/Theme.Red.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
